--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8138,3 +8138,19 @@ span#show_error:after {
         display:none;
     }       
 }
+
+.upload-button {
+    position: relative;
+}
+
+.upload-button input {
+    position:absolute;
+    z-index:2;
+    top:0;
+    left:0;
+    filter: alpha(opacity=0);
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    opacity:0;
+    background-color:transparent;
+    color:transparent;
+}
