--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8175,3 +8175,16 @@ span#show_error:after {
     background-color:transparent;
     color:transparent;
 }
+
+.select2-results__option .wrap:before{
+    font-family:fontAwesome;
+    color:#999;
+    content:"\f096";
+    width:25px;
+    height:25px;
+    padding-right: 10px;
+    
+}
+.select2-results__option[aria-selected=true] .wrap:before{
+    content:"\f14a";
+}
