--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8188,3 +8188,42 @@ span#show_error:after {
 .select2-results__option[aria-selected=true] .wrap:before{
     content:"\f14a";
 }
+
+.select2-selection__rendered {
+    line-height: 34px !important;
+    color: black !important;
+    background-color: #fff !important;
+}
+
+.select2-container .select2-selection--single {
+    height: 36px !important;
+    border: 1px solid black !important;
+    border-radius: 0px !important;
+    color: black !important;
+    background-color: #fff !important;
+    outline: none !important;
+    background-image: none;
+}
+
+.select2-selection__arrow {
+    height: 34px !important;
+    color: black !important;
+    background-color: #fff !important;
+}
+
+.select2-selection__placeholder {
+    color: black !important;
+    font-size: 13px;
+    background-color: #fff !important;
+}
+
+.select2-selection__arrow {
+    border: 0 !important;
+    background-color: #fff !important;
+    background-image: none !important;
+    color: black !important;
+}
+
+.select2-selection__arrow b {
+    color: black;
+}
