--- a/public/css/jquery.fileupload-ui.css
+++ b/public/css/jquery.fileupload-ui.css
@@ -7,7 +7,7 @@
  * https://blueimp.net
  *
  * Licensed under the MIT license:
- * http://www.opensource.org/licenses/MIT
+ * https://opensource.org/licenses/MIT
  */
 
 .fileupload-buttonbar .btn,
@@ -28,7 +28,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  /*background: url("../img/loading.gif") center no-repeat; */
+  background: url("../img/loading.gif") center no-repeat;
   background-size: contain;
 }
 .files audio,
